WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158279
LayoutTest accessibility/ios-simulator/attributed-string-for-range.html failing on ios-simulator debug
https://bugs.webkit.org/show_bug.cgi?id=158279
Summary
LayoutTest accessibility/ios-simulator/attributed-string-for-range.html faili...
Ryan Haddad
Reported
2016-06-01 15:45:14 PDT
--- /Volumes/Data/slave/ios-simulator-9-debug-tests-wk2/build/layout-test-results/accessibility/ios-simulator/attributed-string-for-range-expected.txt +++ /Volumes/Data/slave/ios-simulator-9-debug-tests-wk2/build/layout-test-results/accessibility/ios-simulator/attributed-string-for-range-actual.txt @@ -9,13 +9,13 @@ UIAccessibilityTokenFontName = "Times New Roman"; UIAccessibilityTokenFontSize = 16; }{ - UIAccessibilityTokenAttachment = "WebAccessibilityObjectWrapper: cake"; + UIAccessibilityTokenAttachment = "Role: (48) - Text: cake: Value: (null) -- Frame: 0.000000 0.000000 0.000000 0.000000"; } { UIAccessibilityTokenFontFamily = "Times New Roman"; UIAccessibilityTokenFontName = "Times New Roman"; UIAccessibilityTokenFontSize = 16; }{ - UIAccessibilityTokenAttachment = "WebAccessibilityObjectWrapper: title, subtitle, action"; + UIAccessibilityTokenAttachment = "Role: (14) - Text: title, subtitle, action: Value: 0.50 -- Frame: 47.000000 23.000000 161.000000 119.000000"; } { UIAccessibilityTokenFontFamily = "Times New Roman"; UIAccessibilityTokenFontName = "Times New Roman"; <
https://build.webkit.org/builders/Apple%20iOS%209%20Simulator%20Debug%20WK2%20(Tests)/builds/2302
>
Attachments
Patch
(1.64 KB, patch)
2016-06-01 15:51 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2016-06-01 15:46:29 PDT
Test added with <
https://trac.webkit.org/changeset/201568
>. Seems to pass on ios-simulator release <
http://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=accessibility%2Fios-simulator%2Fattributed-string-for-range.html
>
chris fleizach
Comment 2
2016-06-01 15:48:55 PDT
(In reply to
comment #1
)
> Test added with <
https://trac.webkit.org/changeset/201568
>. > > Seems to pass on ios-simulator release > <
http://webkit-test-results.webkit.org/dashboards/flakiness_dashboard
. > html#showAllRuns=true&tests=accessibility%2Fios-simulator%2Fattributed- > string-for-range.html>
- (NSString *)description is implemented differently on debug/release We should just not do that I think
chris fleizach
Comment 3
2016-06-01 15:51:00 PDT
Created
attachment 280274
[details]
Patch
WebKit Commit Bot
Comment 4
2016-06-01 20:18:35 PDT
Comment on
attachment 280274
[details]
Patch Clearing flags on attachment: 280274 Committed
r201585
: <
http://trac.webkit.org/changeset/201585
>
WebKit Commit Bot
Comment 5
2016-06-01 20:18:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug