LayoutTest accessibility/ios-simulator/attributed-string-for-range.html failing on ios-simulator debug https://bugs.webkit.org/show_bug.cgi?id=158279

Reviewed by Alexey Proskuryakov.

Just use the same description for debug and release. We're not getting any benefit from having two.

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper description]):


Canonical link: https://commits.webkit.org/176372@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201585 268f45cc-cd09-0410-ab3c-d52691b4dbfc